demo/demo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: manvi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
      version: 'v1'
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: demo
        version: 'v1'
    spec:
      containers:
        - name: demo-app
          image: manvinirwal/demo:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/info
              port: http
            initialDelaySeconds: 120
