demo/demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: manvi
  labels:
    app: demo
spec:
  selector:
    app: demo
  type:
  ports:
    - name: http
      port: 8080
