demo/demo-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-virtualservice
  namespace: manvi
spec:
  hosts:
    - demo
  http:
    - route:
        - destination:
            host: demo
            subset: 'v1'
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
